centos-varken/varken-publish.yaml
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: varken
  name: varken
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: varken
